# silver-disco

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/silver_disco/: __init__.py  __main__.py  frame.py  processor.py  statsplot.py
