[project]
name = "silver-disco"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "afaulconbridge" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "pre-commit>=3.7.0",
    "ruff>=0.3.5",
]
